# factkg-extensions

./: .gitignore  README.md  pyproject.toml
conf/: gap4.yaml
docs/: 00_original_paper.md  01_gap_one.md  02_gap_two.md  03_gap_three.md  04_gap_four.md
docs/theory/: fact_verification.md  knowledge_graph_evolution.md  vector_quantization.md
scripts/: create_structure.sh
src/factkg_ext/common/: llm_client.py
src/factkg_ext/constants/: models.py
src/factkg_ext/gap1_llm_rag/: benchmark.py
src/factkg_ext/gap2_kg_update/: pipeline.py
src/factkg_ext/gap3_dense_retrieval/: retriever.py
src/factkg_ext/gap4_qgr_fingerprint/: __init__.py  fingerprinter.py  verifier.py
src/factkg_ext/original/: adapters.py
src/factkg_ext/utilities/: config.py
tests/: test_core.py  test_gap4.py
